
 plugins {
    id "org.springframework.boot" version "${springBootVersion}"
    id "io.spring.dependency-management" version "1.1.7"
    id "java"
}

apply from: "$rootDir/gradle/spring-boot.gradle"
apply from: "$rootDir/gradle/lombok.gradle"

group = 'hr.ent'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}